--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 mingw-w64-libunistring (0.9.7-1) unstable; urgency=medium
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release
 
  -- Tobias Schlemmer <keinstein@users.berlios.de>  Wed, 24 Jan 2018 15:40:01 +0100
